refactor: ID 순서 유지되도록 조회 방식 수정